--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,15 @@
             <artifactId>mockito-core</artifactId>
             <version>2.7.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.3.6.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>cms</finalName>
