--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,10 @@
             <artifactId>spring-test</artifactId>
             <version>4.3.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>cms</finalName>
