--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=cmsgroupb@gmail.com
+spring.mail.password=q1w2e3r4t5y6u7i8
+spring.mail.properties.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
