As a customer I want to pay for the ticket by a credit card

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
             <artifactId>itextpdf</artifactId>
             <version>5.5.10</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>4.7.0</version>
+        </dependency>
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
