--- a/test/main/resources/application.properties
+++ b/test/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.datasource.url=jdbc:hsqldb:mem:cms
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=cmsgroupb@gmail.com
+spring.mail.password=wojtekwojtekwojtek
+spring.mail.properties.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
